pipelinefiles/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: maxisservice-core-frontend
  name: maxisservice-core-frontend-route
  namespace: maxisservice-core-frontend
spec:
  host: maxisservice-portal.nagadpay.com 
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: maxisservice-core-frontend-service
    weight: 100
  wildcardPolicy: None
